--- a/package.json
+++ b/package.json
@@ -12,18 +12,27 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier \"**/*.{md,mdx,json,yaml,js,jsx}\" --write"
   },
   "license": "0BSD",
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-netlify": "^2.8.0",
     "gatsby-plugin-offline": "^3.7.1",
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "postcss": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.5.6",
+    "tailwindcss": "^2.0.2",
+    "use-local-storage-state": "^6.0.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
