--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "autoprefixer": "^10.1.0",
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-manifest": "^2.9.1",
-    "gatsby-plugin-netlify": "^2.8.0",
-    "gatsby-plugin-offline": "^3.7.1",
-    "gatsby-plugin-postcss": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "postcss": "^8.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "autoprefixer": "^10.2.1",
+    "gatsby": "^2.31.0-next.0",
+    "gatsby-plugin-manifest": "^2.11.0-next.0",
+    "gatsby-plugin-netlify": "^2.10.0-next.0",
+    "gatsby-plugin-offline": "^3.9.0-next.0",
+    "gatsby-plugin-postcss": "^3.6.0-next.0",
+    "gatsby-plugin-react-helmet": "^3.9.0-next.0",
+    "postcss": "^8.2.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-query": "^3.5.6",
+    "react-query": "^3.5.11",
     "tailwindcss": "^2.0.2",
-    "use-local-storage-state": "^6.0.2"
+    "use-local-storage-state": "^6.0.3"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
