--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.1",
     "gatsby": "^2.31.0-next.0",
+    "gatsby-plugin-gatsby-cloud": "^0.0.5",
     "gatsby-plugin-manifest": "^2.11.0-next.0",
     "gatsby-plugin-netlify": "^2.10.0-next.0",
     "gatsby-plugin-offline": "^3.9.0-next.0",
